# rush-shell

./: CMakeLists.txt  Makefile  README.md  main.c
Documentation/: doc.md
documentation/: doc.md
io-exceptions/: exceptions.c  exceptions.h
services/allocation/: allocation.service.c  allocation.service.h  allocation.sevice.c  allocation.sevice.h
services/commandline/: commandline.service.c  commandline.service.h
services/engine/: engine.service.c  engine.service.h
services/file/: file.service.c  file.service.h
views/messages/: messages.view.c  messages.view.h
